# DynamoDB_Rust

./: Cargo.toml
src/: keys.rs  main.rs
src/error/: mod.rs
src/service/: login.rs  mod.rs  other.rs
src/types/: auth_body.rs  mod.rs  user.rs
