[package]
name = "dynamo_db_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-http = "0.54.1"
aws-smithy-client = { versio = "0.54.3", features = [
    "client-hyper",
    "rustls",
    "rt-tokio",
] }
aws-smithy-http = { version = "0.54.3", features = ["rt-tokio"] }
aws-smithy-types = "0.54.3"
axum = { version = "0.6.7", features = ["headers"] }
http = "0.2.5"
futures = "0.3"
log = "0.4.17"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_22"] }
structopt = { version = "0.3", default-features = false }
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.8"
tower-http = { version = "0.3.0", features = ["cors"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
anyhow = "1.0"
